@@ -45,6 +45,7 @@ install-WWW:
 	tar -C $(webdir)/ -xzf $(outdir)/web.tar.gz
 # install-WWW does not recurse; fake it visiting Documentation/user manually
 	$(MAKE) -C Documentation/user local-install-WWW
+	$(MAKE) -C Documentation/user install-info
 
 web-install:
 	$(MAKE) out=www install-WWW
@@ -59,11 +60,11 @@ local-install:
 	$(INSTALL) -d $(local_lilypond_datadir)
 
 final-install:
-	@echo
-	@echo " *** Before running, buildscripts/out/lilypond-{profile,login}"
-	@echo " *** must be run. You're advised to source these scripts from your "
-	@echo " *** login scripts. For more information, see Invoking LilyPond in the manual."
-	@echo
+	@echo '*** Before using LilyPond, the contents of one of the login scripts'
+	@echo '*** buildscripts/out/lilypond-{profile,login} should be sourced.'
+	@echo '*** LilyPond should have been installed to do that automatically'
+	@echo '*** when you log in.  So, please log out now and log in again.'
+	@echo '*** For more information see Invoking LilyPond in the manual.'
 
 web-ext = gz html midi pdf png txt ly
 
